configure for github pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://roozky.herokuapp.com/
+url: http://rozky.github.io
 title: Roozky's Wonders
 subtitle: Blogging about programming
 author: Your Name
